[package]
name = "lexer-generator"
version = "0.1.1"
edition = "2021"
description = "Lexer derived from Regex patterns with user customizeable tokens"
license = "MIT"
documentation = "https://docs.rs/lexer-generator"
repository = "https://github.com/lackingInGrav1tas/lexer-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", features = [ "derive" ] }
regex = "1"